--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ power_controller = {path="../power_controller"}
 serde = "1.0"
 serde_json = "1.0"
 log = "0.4"
+simplelog="0.12"
 num = "0.4"
 clap = {version = "3.*.*", features = ["derive"]}
