report power when it is too high

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "app_lanucher"
+name = "app_launcher"
 version = "0.1.0"
 authors = ["Ivory E.Seagull"]
 edition = "2021"
@@ -15,3 +15,6 @@ simplelog="0.12"
 num = "0.4"
 clap = {version = "3.*.*", features = ["derive"]}
 regex = "1"
+signal-hook = "0.3"
+nix = "0.25"
+lazy_static="1"
